--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,3 @@
 [build]
-  # Default build command.
-  command = "echo 'default context'"
-
-  # Directory with the lambda functions to deploy to AWS.
-  functions = "src/"
+  command = "npm run build"
+  functions = "public"
