--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "netlify-lambda build src/netlify/"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "netlify-lambda": "^1.0.3",
     "standard": "^12.0.1"
   }
 }
